# footStatsPostgresSQL

./: README.md  create_tables.py  pyproject.toml  soccerdata.py  soccerdata2.py  soccerdata3.py  soccerdata4.py  soccerdata5.py  sync.py  sync_bet_odds.py  sync_matches_details.py  sync_seasons.py  sync_stats.py  sync_teams.py
src/: config.py  db.py  footystats.py  footystats_db.py  models.py  utils.py
src/crud/: match_bet_odds.py
src/schemes/: __init__.py  base.py  btts_stats.py  country.py  league.py  league_match.py  league_player.py  league_referee.py  league_stats.py  league_tables.py  league_team.py  match.py  match_details.py  odds_comparison.py  over25_stats.py  season.py  team.py  team_lastx.py  team_stats.py  team_stats_addional_info.py  weather.py
src/scrapers/: __init__.py  all.py  bet10.py  betway.py  hollywood.py  pinnacle.py  sportingbet.py  supabets.py  supersport.py
tests/: conftest.py  test_footystats.py  test_footystats_db.py  test_scrapers.py  test_utils.py
tests/crud/: test_match_bet_odds.py
