[project]
name = "footystats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pyright>=1.1.402",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]


[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
